@@ -2,9 +2,10 @@
 ### The todo conduit is deprecated -- well, it has moved to
 ### vcalconduit where it shares most of the code with the vcalconduit.
 ###
-SUBDIRS = null \
-	vcalconduit \
-	popmail \
-	knotes \
-	expense \
-	abbrowserconduit
+SUBDIRS = null
+
+#	vcalconduit \
+#	popmail \
+#	knotes \
+#	expense \
+#	abbrowserconduit
